--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Movie Search App</string>
+    <string name="add_to_favorites">Add to Favorites</string>
+    <string name="back">Back</string>
+    <string name="poster">Poster</string>
+    <string name="search">Search</string>
+    <string name="search_movies">Search movies...</string>
+    <string name="favorites">Favorites</string>
+    <string name="year">Year</string>
+    <string name="studio">Studio</string>
+    <string name="imdb">IMDB</string>
+    <string name="back_to_search">Back to Search</string>
+    <string name="movie_plot_here">Movie plot here...</string>
+    <string name="rating">Rating</string>
 </resources>
